# Native-C-Client-Server-application

./: .gitignore  CMakeLists.txt  TcpServer.cpp
Client/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  TspClient.cpp  TspClient.h  main.cpp
Client/Logger/: Logger.h
Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Server/: CMakeLists.txt  Client.cpp  Client.h  TcpServer.cpp  TcpServer.h  main.cpp
Server/Logger/: CMakeLists.txt  Logger.cpp  main.cpp
